# LocalSend

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.ui
forms/: mainwindow.ui
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
